# uxsim

./: .env  README.md  amazon_simulation.py  example_usage.py  persona.json  pyproject.toml  sarah_persona.json  searchsim_examples.py  test_amazon.py  test_searchsim.py  test_uxsim.py  uxsim_examples.py
output/: agent_0.pkl  checkpoint_step_10.json  checkpoint_step_5.json  intent.txt  memory_trace_0.txt  page_0.html  persona.txt  simulation_results.json  step_trace.json
runs/amazon_budget_shopper/: action_trace.txt  agent_0.pkl  agent_1.pkl  agent_10.pkl  agent_11.pkl  agent_12.pkl  agent_13.pkl  agent_14.pkl  agent_15.pkl  agent_16.pkl  agent_17.pkl  agent_18.pkl  agent_19.pkl  agent_2.pkl  agent_20.pkl  agent_21.pkl  agent_22.pkl  agent_23.pkl  agent_24.pkl  agent_25.pkl  agent_26.pkl  agent_27.pkl  agent_28.pkl  agent_29.pkl  agent_3.pkl  agent_30.pkl  agent_31.pkl  agent_32.pkl  agent_33.pkl  agent_34.pkl  agent_35.pkl  agent_36.pkl  agent_4.pkl  agent_5.pkl  agent_6.pkl  agent_7.pkl  agent_8.pkl  agent_9.pkl  intent.txt  memory_trace_0.txt  (+53 more)
searchsim/: __init__.py  cli.py  simulation.py
searchsim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
searchsim/configs/: amazon_config.yaml  exp_cognitive_loop.yml
searchsim/core/: exceptions.py  types.py
searchsim/environments/: web_browser_env.py
searchsim/environments/recipes/: amazon.py
searchsim/llm/: llm_client.py  prompts.py
searchsim/personas/: example_persona.json
searchsim/policies/: agent_policy.py  base_policy.py  cognitive_loop_policy.py  component_policy.py
searchsim/simulators/cognitive_loop/: reflect.py
searchsim/simulators/policies/: cognitive_loop_policy.py
uxsim/: __init__.py  agent.py  cli.py  simulation.py
uxsim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
uxsim/configs/: amazon_config.yaml  exp_classic_mock.yml
uxsim/core/: exceptions.py
uxsim/environments/: base_env.py  web_browser_env.py
uxsim/environments/recipes/: __init__.py  amazon.py
uxsim/llm/: __init__.py  prompts.py
uxsim/policies/: agent_policy.py  cognitive_loop_policy.py
uxsim/simulators/cognitive_loop/: act.py  perceive.py  plan.py
uxsim/simulators/components/: action_selectors.py  query_generators.py  relevance_classifiers.py
uxsim/simulators/policies/: base_policy.py  component_policy.py
