[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uxsim"
version = "0.2.0"
description = "Advanced Search Simulation Framework with LLM-based Agents"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["simulation", "search", "llm", "agent", "web-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "click>=8.0.0",
    "numpy>=1.20.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "aioboto3>=12.0.0",
    "selenium>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
web = [
    "selenium>=4.0.0",
    "webdriver-manager>=3.8.0",
    "chromedriver-autoinstaller>=0.6.0",
]
llm = [
    "openai>=1.0.0",
    "aioboto3>=12.0.0",
    "boto3>=1.26.0",
    "anthropic>=0.7.0",
]
search = [
    "elasticsearch>=8.0.0",
    "whoosh>=2.7.4",
    "pytrec-eval>=0.5",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
all = [
    "uxsim[web,llm,search,dev]"
]

[project.urls]
Homepage = "https://github.com/uxsim/uxsim"
Documentation = "https://uxsim.readthedocs.io"
Repository = "https://github.com/uxsim/uxsim"
"Bug Tracker" = "https://github.com/uxsim/uxsim/issues"

[project.scripts]
uxsim = "uxsim.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["uxsim"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "openai.*",
    "aioboto3.*",
    "boto3.*",
    "beautifulsoup4.*",
    "tqdm.*",
]
ignore_missing_imports = true 